src/objects/APTS_Stage_MSPA_Approvals__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Active__c</fullName>
        <label>Active</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Actual_Approver__c</fullName>
        <label>Actual Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Action_Date__c</fullName>
        <label>Approval Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_History_Step__c</fullName>
        <label>SPA Approval History Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Approver__c</fullName>
        <label>Assiged Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Created_By__c</fullName>
        <label>Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Created_On__c</fullName>
        <label>Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Delegate_Approver__c</fullName>
        <label>Delegate Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <description>Error Message for MSPA Approval Record</description>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Notes__c</fullName>
        <label>Notes (SPAReference)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object__c</fullName>
        <label>MSPA Approval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RowStatus__c</fullName>
        <label>RowStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SPA_Reference__c</fullName>
        <label>SPA Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Stage MSPA Approval</label>
    <nameField>
        <displayFormat>MA{0000000}</displayFormat>
        <label>Stage MSPA Approvers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSPA_Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>